[gd_scene load_steps=11 format=3 uid="uid://dogp5icuw6k86"]

[ext_resource type="Script" uid="uid://crig3uivh0oar" path="res://scripts/world/proj_rock.gd" id="1_uw0cy"]
[ext_resource type="ArrayMesh" uid="uid://bixnf8lylqita" path="res://assets/world/world_1_other/proj_rock.vox" id="2_mxqy8"]
[ext_resource type="PackedScene" uid="uid://dnpw2ecqqfcf8" path="res://particles/proj_rock_hit.tscn" id="2_pppel"]
[ext_resource type="Script" uid="uid://qmw71aj2hoe3" path="res://scripts/entities/hitbox.gd" id="3_mxqy8"]

[sub_resource type="SphereShape3D" id="SphereShape3D_pppel"]
radius = 0.2

[sub_resource type="Animation" id="Animation_vvbvq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProjRock:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_pppel"]
resource_name = "fade_out"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ProjRock:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5), Vector3(0.1, 0.1, 0.1)]
}

[sub_resource type="Animation" id="Animation_0agd8"]
resource_name = "fade_in"
length = 0.25

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yktff"]
_data = {
&"RESET": SubResource("Animation_vvbvq"),
&"fade_in": SubResource("Animation_0agd8"),
&"fade_out": SubResource("Animation_pppel")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_0agd8"]
radius = 0.25

[node name="ProjRock" type="Area3D"]
collision_layer = 8
collision_mask = 11
script = ExtResource("1_uw0cy")
hit_particle = ExtResource("2_pppel")

[node name="ProjRock" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh = ExtResource("2_mxqy8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_pppel")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yktff")
}

[node name="Hitbox" type="Area3D" parent="."]
script = ExtResource("3_mxqy8")
metadata/_custom_type_script = "uid://qmw71aj2hoe3"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("SphereShape3D_0agd8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
